# FalconDrone

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  falconDrone.ioc  visual.py
Core/Inc/: MPU6050.h  cpp_adapter.h  i2c.h  logger.h  stm32f4xx_it.h  tim.h
Core/Src/: MPU6050.cpp  cpp_adapter.cpp  dma.c  freertos.c  i2c.c  logger.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
cmake/: arm-none-eabi-gcc.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: UART_DMA_FIX.md
include/: FreeRTOSConfig.h
src/: main.cpp
